Setup main website padding

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
- div {
-  margin-left: 10%;
-  margin-right: 10%;
-  margin-top: 2%
+ .main-wrapper {
+  margin-left: 15%;
+  margin-right: 15%;
+  margin-top: 2.5%
  }
