--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -3,3 +3,10 @@
     justify-content: space-between ;
     flex-wrap: wrap;
 }
+
+@media screen and (max-width: 600px) {
+    #navbar-wrapper {
+        flex-direction: column;
+        align-items: center;
+    }
+}
